feat: operator lesson

--- a/learning_log/20250422.md
+++ b/learning_log/20250422.md
@@ -53,7 +53,25 @@ intellij는 껐다가 키겠습니다 ctrl + s가 저장
 터미널에서 git init 입력했을 때 initialized empty git repository라고 뜨면 완료
 
 chrome -> github -> sign up
+git config user.name "여러분깃허브아이디"
+git config user.email "여러분깃허브이메일"
+확인하기 위한 명령어
+git config user.name
+git config user.email
 
+
+echo "# korit_4_java" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/maybeags/korit_4_java.git
+git push -u origin main
+
+maybeags -> user로 들어가시면 저 한 명만 있을겁니다.
+
+터미널에서 시뻘겋게 오류 뜨신 분들 대상입니다
+window + 자격 증명 
 
 
 
