--- a/learning_log/20250422.md
+++ b/learning_log/20250422.md
@@ -74,6 +74,42 @@ maybeags -> user로 들어가시면 저 한 명만 있을겁니다.
 window + 자격 증명 
 
 
+숫자 사용의 경우 1. 하고 스페이스 바 한 번 쓰시면 
+ordered list(순서가 있는 리스트)에 해당합니다.
+1. 이렇게 쓰면
+2. 순서가 생깁니다.
+
+
+순서가 필요없는(unordered list) 리스트의 경우에는 - 하고
+스페이스 바 한 번 쓰시면 됩니다.
+
+- 이렇게 쓰면
+- 순서가 없는 리스트가 생깁니다.
+- 엔터치면 자동완성도 되는데
+  - 거기서 탭을 누르면 들여쓰기가 됩니다.
+  - 엔터를 한 번 더 치면
+- 들여쓰기가 취소됩니다.
+  1. 내부에 따로 번호를 매기는 것도 가능합니다.
+  2. 로마자로 작성되죠.
+
+코드블록 작성하는 markdown문법
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        // code를 쓰는 영역
+    }
+}
+```
+백틱이라고 부르는 겁니다 1 왼쪽에 있는 키입니다.
+그거 세 번 누르면 코드블록을 작성할 수 있습니다.
+
+`단어` 하나만 블록을 잡을 때는 백틱을 한 번만 사용
+* 근데 얘랑
+- 이게 겹칩니다
+
+learning_log 우클릭 -> 새로 만들기
+-> 파일 -> 20250422_review.md
 
 
 
