feat: 20250422 / java_started

--- a/learning_log/20250422.md
+++ b/learning_log/20250422.md
@@ -111,6 +111,10 @@ public class Main {
 learning_log 우클릭 -> 새로 만들기
 -> 파일 -> 20250422_review.md
 
+git add .
+git commit -m "feat: 20250422 / java_started"
+git push 
+
 
 
 
