feat: condition guideline uploaded

--- a/learning_log/20250423.md
+++ b/learning_log/20250423.md
@@ -46,3 +46,5 @@ ch05_conversion -> Main -> main method 적용
 | long   | 64          | ✔︎       | -2⁶³ ~ 2⁶³-1                                   | 약 -9.22×10¹⁸ ~ +9.22×10¹⁸   |
 | float  | 32          | IEEE 754 | 약 ±1.4×10⁻⁴⁵ ~ ±3.4×10³⁸ (유효숫자 ≈ 7자리)     | 단정도 (single-precision)    |
 | double | 64          | IEEE 754 | 약 ±4.9×10⁻³²⁴ ~ ±1.7×10³⁰⁸ (유효숫자 ≈ 15자리) | 배정도 (double-precision)    |
+
+# 조건문(Condition)
