feat: 20250423 before switch

--- a/learning_log/20250423.md
+++ b/learning_log/20250423.md
@@ -48,3 +48,7 @@ ch05_conversion -> Main -> main method 적용
 | double | 64          | IEEE 754 | 약 ±4.9×10⁻³²⁴ ~ ±1.7×10³⁰⁸ (유효숫자 ≈ 15자리) | 배정도 (double-precision)    |
 
 # 조건문(Condition)
+
+
+# 삼항 연산자까지의 부분을 작성해주세요
+# 강사를 많이 뽑아먹으셔야 합니다 !! 🙌
