feat: 20250423 condition / loops

--- a/learning_log/20250423.md
+++ b/learning_log/20250423.md
@@ -52,3 +52,16 @@ ch05_conversion -> Main -> main method 적용
 
 # 삼항 연산자까지의 부분을 작성해주세요
 # 강사를 많이 뽑아먹으셔야 합니다 !! 🙌
+
+
+# 반복문 while
+
+# 반복문 for
+
+# 중첩 관련
+
+# methods / class / setter_getter
+
+git add .
+git commit -m "feat: 20250423 condition / loops"
+git push
