feat: setter / getter

--- a/learning_log/20250425.md
+++ b/learning_log/20250425.md
@@ -1,1 +1,96 @@
 # TGIF 입실 체크 하세요!! 🎶
+# Setter / Getter
+## Setter / Getter의 필요성
+1. 문제 상황
+- 클래스를 하나 만든다고 가정하겠습니다. 예를 들어 Person 클래스를 생성하면서
+이름, 나이 등의 정보를 저장하기 위해 필드를 선언합니다.
+```java
+public class Person {
+    String name;
+    int age;
+} 
+// 그리고 이를 PersonMain에서 객체를 생성한다고 가정하겠습니다.
+public class PersonMain {
+    public static void main(String[] args) {
+        // Person 객체 생성
+        Person person1 = new Person();  // 기본생성자는 정의 안해도 되죠
+        person1.name = "김일";
+        person1.age = -10;
+        System.out.println(person1.name);   // 결과값 : 김일
+        System.out.println(person1.age);    // 결과값 : -10
+    }
+}
+```
+이상의 코드를 확인했을 때 나이에 정상적이지 않은 값이 대입돼있습니다. 이처럼
+외부(다른 클래스)에서 직접 속성값을 대입하게 될 때, 이상한 값이 들어가더라도
+통제할 수 있는 방법이 없다는 문제가 있습니다.
+    -> 이를 해결하기 위한 방법이 Setter / Getter 개념입니다.
+
+## Setter / Getter란?
+1. Setter
+    - 데이터를 '설정'하는 역할의 'method.' 클래스 외부에서 필드를 직접
+    수정하지 못하도록 막고, 특정 메서드를 경유하여 값을 전달 받아 '초기화 및
+    수정'을 하도록 함.
+2. Getter
+    - 데이터를 '조회'하는 역할의 'method.' 클래스 외부에서 필드를 직접
+    읽지 못하도록 막고, 특정 메서드를 경유하여 안전하게 값을 '반환'하도록 함.
+
+3. 장점
+    1. 데이터 보호
+       - 변수가 private 접근 제어자(추후(오늘) 수업 예정)를 사용하여 외부에서
+        직접 접근하지 못하게 함으로써 데이터를 보호할 수 있음.
+    2. 데이터의 유효성 검증(아까 -10 걸러내는 부분을 의미합니다)
+        - Setter 메서드에서 입력된 데이터가 적합한지 확인하고, 잘못된 값을
+        거절할 수 있음.
+    3. 캡슐화(encapsulation)
+        - 데이터를 숨기고 필요한 경우에만 제한적으로 접근할 수 있게 하여
+        클래스 내부 구현을 외부에 노출하지 않음.
+    4. 유연성 증가
+        - 나중에 요구 사항이 바뀌어 데이터를 설정하거나 조회하는 방법이 변경
+        되더라도 클래스(Main이 아닌 클래스) 내부의 메서드만 수정하면 되므로
+        유지 보수가 쉬워짐.
+       
+## Setter / Getter의 구조
+### Setter
+
+```java
+접근지정자 void set속성명1(자료형 변수명) {
+    this.속성명1 = 변수명;
+}
+public void setName(string name) {
+    this.name = name;
+}
+```
+
+### Getter
+
+```java
+접근지정자 String/int/etc get속성명2() {
+    return 속성명2;
+}
+public int getAge() {
+    return age;
+}
+```
+
+### Setter를 기준으로 데이터 유효성 검증 예시
+```java
+public void setAge(int age) {
+    if (age < 0 || age > 200) {
+        System.out.println("불가능한 나이 입력입니다.");
+        return;         // method에서 return;이라고 입력하면 method 바로 종료됨.
+                        // 즉 여기부터는 아예 실행 안됨.
+    }
+    System.out.println("변경 전 나이 : " + this.age);
+    System.out.println("변경 후 나이 : " + age);
+    this.age = age;
+    System.out.println("변경 후 나이 : " + this.age);
+}
+
+```
+
+
+
+
+
+
