feat: Person class guideline

--- a/learning_log/20250425.md
+++ b/learning_log/20250425.md
@@ -88,7 +88,14 @@ public void setAge(int age) {
 }
 
 ```
+ch10_setter_getter / Person, PersonMain
 
+생성자 자동 생성
+좌측 상단 햄버거(메뉴바) 클릭 -> code(코드) 클릭 -> generate(생성) 클릭 
+-> Constructor(생성자) 클릭 -> 원하는 필드 선택 후에 enter 치면 생성자 자동 완성됩니다.
+
+혹은
+alt + ins 눌러서 생성자 -> 필드 선택 후에 enter
 
 
 
