feat: bank guideline

--- a/learning_log/20250425.md
+++ b/learning_log/20250425.md
@@ -75,16 +75,19 @@ public int getAge() {
 
 ### Setter를 기준으로 데이터 유효성 검증 예시
 ```java
-public void setAge(int age) {
-    if (age < 0 || age > 200) {
-        System.out.println("불가능한 나이 입력입니다.");
-        return;         // method에서 return;이라고 입력하면 method 바로 종료됨.
-                        // 즉 여기부터는 아예 실행 안됨.
+public class Person {
+    int age;
+    public void setAge(int birth) {
+        if (birth < 0 || birth > 200) {
+            System.out.println("불가능한 나이 입력입니다.");
+            return;         // method에서 return;이라고 입력하면 method 바로 종료됨.
+                            // 즉 여기부터는 아예 실행 안됨.
+        }
+        System.out.println("변경 전 나이 : " + this.age);
+        System.out.println("변경 후 나이 : " + birth);
+        this.age = birth;
+        System.out.println("변경 후 나이 : " + this.age);
     }
-    System.out.println("변경 전 나이 : " + this.age);
-    System.out.println("변경 후 나이 : " + age);
-    this.age = age;
-    System.out.println("변경 후 나이 : " + this.age);
 }
 
 ```
@@ -97,6 +100,60 @@ ch10_setter_getter / Person, PersonMain
 혹은
 alt + ins 눌러서 생성자 -> 필드 선택 후에 enter
 
+강사 깃허브 아이디 : maybeags
+
+# 접근지정자(Access Modifier)
+## 정의
+- 클래스, 변수, 메서드의 접근 범위를 제어하는 키워드로,
+- 사용 이유
+  - 정보 은닉(캡슐화 : Encapulation)을 실현하고, 코드의 보안성과 유지 보수성을 위해.
+## 접근 지정자의 종류
+1. public - 모든 클래스에서 접근 가능
+   - setter / getter를 자동 생성하게 되면 public이 생성되는 것을 확인할 수 있는데,
+   - 애초에 다른 클래스에서 쓰게끔 만들어진거라서 그렇습니다.
+
+2. protected 
+   - 같은 패키지 내의 클래스 및 이 클래스를 상속 받은 자식 클래스에서 접근 가능(상속은 추후 설명)
+
+3. default(package-private)
+    - 접근 지정자를 명시하지 않으면 default로 간주되며, 같은 패키지 내의 클래스에서만 접근 가능
+
+4. private
+    - 같은 클래스 내에서만 접근 가능
+    - 그래서 잘 생각해보시면 Person class에서 필드를 private 지정을 해뒀는데, getName의 경우
+```java
+public class Student {
+    private int studentCode;
+    public int getStudentCode() {
+        return studentCode;
+    }
+}   
+
+public class StudentMain {
+    public static void main(String[] args) {
+        Student student1 = new Student();
+        System.out.println(student1.getStudentCode());  // 127번 라인을 실행하세요. -> studentCode가 리턴
+    }
+}
+
+```
+student1.getStudentCode()의 호출 결과는 student1.studentCode가 됩니다. 근데 저희는
+객체를 생성할 때 studentCode에 아무런 값을 넣은 적이 없으니까
+student1.studentCode == 0;이라고 생각할 수 있겠네요.
+호출 뒤의 135번라인의 결과는 System.out.println(0); 이라는 의미가 될 것이고,
+그 결과 콘솔창에 0이 출력됩니다.
+
+- 이상의 코드 내용과 해설이 이해가 어려울 수 있습니다. -> 만약 이 부분을 깨닫는 순간이 오면 저는 제 개인적으로
+  코딩력이 상승했었습니다.
+
+
+- 향후 수업에 있어서 접근 지정자의 개념이 명확하게 중요하다기 보다는
+class의 필드 선언에 거의 기본적으로 private을 지정하게 될겁니다(setter/getter 사용을 위해)
+그래서 여러분들이 코드를 직접 작성하는 측면에 있어서 중요한 것은
+생성자를 어떻게 만들 것인가 / setter / getter를 자동 생성한 후에 어떻게 편집할 것인가가 좀 더 중요합니다.
+
+Bank
+BankMain
 
 
 
