feat: enhanced for / array task guideline

--- a/learning_log/20250428.md
+++ b/learning_log/20250428.md
@@ -65,6 +65,18 @@ public class Array04 {
 - 하지만 overloading의 개념이 도입되고 나서는 메서드명에 대한 고민 필요 없이 `소괄호()` 내의 부분을 수정해주면
 코드를 그대로 재사용할 수 있다는 점에서 코드의 재사용성 및 유지보수성의 증진을 가져왔습니다.
 
+## 장점
+- 동일한 기능을 하는 메서드를 정의할 때 메서드명이 필요한데, 예를 들어 String 자료형끼리 연결해주는 메서드와
+    int 끼리 합 연산을 하는 메서드를 나누었을 때,
+    그리고, double끼리 합 연산을 하거나 double과 int를 합 연산을 하는 메서드가 있다고 가정한다면
+    add,
+    plus,
+    connect 등의 메서드 명으로 정의했다면 그 다음 메서드는 또 뭘 써야 할까요?
+
+- 이상의 문제를 해결하기 위해 메서드명은 동일하지만 매개변수를 다르게하면 알아서 매개변수에 맞는 메서드를 실행시킬 수
+있게끔 하는 것이 method overloading으로 객관식 시험에서 장점 기준으로 자주 나오는 편입니다.
+
+- 저희는 이상의 코드블록에서 printNames라는 메서드의 매개변수를 String[] 배열과 int[] 배열 두 가지로 작성했습니다.
 
 
 
