--- a/learning_log/20250428.md
+++ b/learning_log/20250428.md
@@ -78,6 +78,40 @@ public class Array04 {
 
 - 저희는 이상의 코드블록에서 printNames라는 메서드의 매개변수를 String[] 배열과 int[] 배열 두 가지로 작성했습니다.
 
+# 상속(inheritance)
+- 객체 지향 프로그래밍(OOP : Object-oriented Programming)의 핵심 개념 중 하나로, 기존 클래스(부모(슈퍼)클래스)의
+속성과 메서드를 재사용하여 새로운 클래스(자식(서브)클래스)를 만드는 것을 의미함.
+
+## 상속의 필요성
+- 상속을 통해 공통적인 기능을 부모 클래스에 정의하고, 이를 '여러' 자식 클래스가 재사용 가능
+  - ex : 동물(Animal) 클래스가 있고, 이를 상속 받는 개(Dog), 고양(Cat) 클래스가 있다고 가정. 동물의 공통적인 속성
+    (이름, 나이 등)과 행위(걷기, 먹기)를 부모 클래스에 정의, 개와 고양이는 각각 고유한 특성(짖기 / 울기 등)을 추가 가능.
+- 이상의 과정을 거쳤을 때 얻을 수 있는 이점 - 중복된 코드를 작성하지 않아도 됨.
+  - 즉 Dog 클래스에 이름, 나이 / Cat 클래스에 이름, 나이라는 field를 선언할 필요가 없고, 걷기, 먹기에 해당하는 메서드도
+    정의할 필요가 없음 -> 코드의 재사용성이 늘어남.
+
+## 상속의 특징
+1. 단일 상속
+    - Java는 단일 상속만 지원함. 하나의 클래스는 한 번에 하나의 부모 클래스만 상속 받을 수 있어 상속 구조가 간단함.
+2. `super` 키워드
+    - 클래스의 생성자 및 setter에서 학습한 this와 유사한 개념
+    - 부모 클래스의 필드에 접근하거나 부모 클래스의 생성자를 호출할 때 사용(코드로 보여드릴 예정입니다).
+3. `method override`
+    - 자식 클래스에서 부모 클래스의 기본 동작을 _재정의_ 할 수 있음. 이를 통해 자식 클래스는 부모 클래스의 기본 동작을
+        자신만의 방식으로 변경 가능
+    - Animal 클래스의 걷기를 Dog가 상속 받고, 네 발로 걷기로 '재정의,' Human 클래스가 상속 받고 두 발로 걷기로 '재정의'
+4. `final` 키워드 - 클래스 / 메서드에 final을 사용하면 상속 제한
+   - final 클래스 - 상속 자체가 불가능
+   - final 메서드 - 메서드 오버라이딩 불가능
+
+
+
+
+
+
+
+
+
 
 
 
