feat: 20250428 array / inheritance / method overriding

--- a/learning_log/20250428.md
+++ b/learning_log/20250428.md
@@ -105,6 +105,25 @@ public class Array04 {
    - final 메서드 - 메서드 오버라이딩 불가능
 
 
+ch14_casting -> animals -> Animal / Dog / Main -> 업캐스팅과 다운캐스팅을 응용한 형태의 수업
+Dog 클래스로 만들어진 객체를 Animal 클래스로 업캐스팅을 한다는 의미입니다.
+
+# 배열을 기준으로 1, 2차로 나눠서
+## 선언 방법 / 초기화 방법
+## element 추출 방식
+## 배열 전체 String 형태로 출력하는 방법
+## Arrays.sort() -> overloading 개념과 합쳐져서 어떻게 사용되는지
+
+# 상속
+## override vs. overloading
+## super 키워드 정리
+## int getter의 경우 출력문을 작성하고 싶으면 main 단계에서 어떤 꼼수를 쓸 수 있는지
+
+git add .
+git commit -m "feat: 20250428 array / inheritance / method overriding"
+git push
+
+
 
 
 
