--- a/learning_log/20250429.md
+++ b/learning_log/20250429.md
@@ -43,6 +43,44 @@ public abstract void showInfo(); // 구현부{}는 자식 클래스에서 적용
 - 특히 super 키워드의 경우 정처기 등 시험에서 자주 나오는 편입니다. 그 경우 여러 개의 클래스가
 나오기 때문에 난이도를 올리는 주범입니다.
 
+# 인터페이스(Interface)
+- Java에서 클래스가 구현해야하는 '메서드들'의 집합을 정의하는 일종의 규약(protocol)
+- 인터페이스는 메서드의 시그니처(메서드명, 리턴 타입, 매개변수 목록)만을 포함하며, 메서드의
+  실제 구현은 포함하지 않음 -> 추상 메서드와 유사한 점
+
+- 다중상속을 지원 -> 이를 통해 클래스가 여러 인터페이스를 구현할 수 있음.
+  - 추상 클래스는 단일 상속을 지원하기 때문에 상속 과정을 알아보기 쉽다고 수업했었는데 얘는 또
+  다중 상속을 지원합니다.
+
+## 특징
+1. 추상 메서드 : 인터페이스 내의 '모든 메서드'들은 기본적으로 추상 메서드
+2. 상수 : 인터페이스 내에서 선언된 변수들은 모두 '자동으로' public static final 상수로 취급됨.
+3. 다중 상속 : 클래스는 여러 인터페이스를 구현할 수 있음.
+
+## 추상 클래스와의 공통점
+- 모두 추상 메서드를 포함할 수 있고, 이를 자식(서브) 클래스에서 구현해야만 한다.(빨간줄뜬다)
+
+## 추상 클래스와의 차이점
+- 추상 클래스
+  1. 부분 구현 허용 - 추상 클래스는 추상 메서드 뿐만 아니라 일반 메서드도 포함할 수 있다.
+  2. 상태 저장 가능 - 추상 클래스는 '변수'를 가질 수 있다.
+  3. 단일 상속 - 클래스는 하나의 추상 클래스만 상속 받을 수 있다.
+  4. 생성자 - 추상 클래스는 생성자를 가질 수 있다(익명 클래스 만들 때 기본 생성자를 사용했습니다).
+  5. 다양한 접근 지정자 - 추상 클래스의 메서드와 변수는 다양한 접근 지정자를 가질 수 있다
+     (저희는 private 사용했습니다).
+- 인터페이스
+  1. 완전한 추상화 - 인터페이스는 기본적으로 모든 메서드가 추상 메서드
+      (Java8 이후에 default / static 등 접근 지정자와 키워드를 사용 가능하긴 합니다)
+  2. 인터페이스는 인스턴스 변수(필드 중 객체마다 값이 다른 변수)를 가질 수 없고 '상수만 선언 가능'
+    -> 상수는 선언과 동시에 초기화되어야하며 이후 값을 바꿀 수 없었습니다. 그래서 작성 방식이
+     일반 field와는 차이가 있습니다.
+  3. 다중 상속 - 클래스는 여러 인터페이스를 '구현할 수 있다.'(상속이라고 표현하지 않는 이유가 있음)
+  4. 생성자 없음 - 인터페이스는 생성자를 가질 수 없다 ->
+     필드에서 객체마다 다른 값을 지닐 수 없기 때문에 생성자를 정의할 필요도 없습니다.
+  5. 자동 public - 인터페이스의 메서드들은 자동으로 public이며, 메서드 선언에 접근 지정자를 명시할
+    필요 x / 근데 default / static 메서드가 Java8 이후에 생기긴 또 했습니다.
+
+interfaces 패키지에 -> Press라는 interface를 만들겁니다.
 
 
 
