--- a/learning_log/20250429.md
+++ b/learning_log/20250429.md
@@ -82,6 +82,40 @@ public abstract void showInfo(); // 구현부{}는 자식 클래스에서 적용
 
 interfaces 패키지에 -> Press라는 interface를 만들겁니다.
 
+1. interface Up의 void onUp() -> String onUp()
+2. abstract class인 Button에서 구현했을 때
+```java
+public abstract class Button implements Press, Down, Up {
+    @Override
+    public String onUp() {
+        return "올립니다";
+    }
+}
+```
+    로 수정
+3. ChannelUpButton을
+```java
+public class ChannelUpButton extends Button {
+    @Override
+    public String onUp() {
+        return "채널을 계속 " + super.onUp();
+    }
+}
+```
+로 수정
+
+4. TvRemoteController를
+```java
+public class TvRemoteController {
+    public void onUpChannelUpButton() {
+        System.out.print("TV의 ");
+        channelUpButton.onUp();
+    }
+}
+```
+인데 얘를 Main에서 실행해보니까 TV의 까지만 뜨고 채널을 계속 올립니다가 안뜹니다.
+어떻게 해결해야 할까요?
+
 
 
 
