feat: reference type casting lesson

--- a/learning_log/20250429.md
+++ b/learning_log/20250429.md
@@ -116,6 +116,59 @@ public class TvRemoteController {
 인데 얘를 Main에서 실행해보니까 TV의 까지만 뜨고 채널을 계속 올립니다가 안뜹니다.
 어떻게 해결해야 할까요?
 
+# 참조 자료형 캐스팅(Reference Type Casting)
+## 정의
+- Java에서 자료형은 크게 두 가지로 구분
+    - 기본 자료형(Primitive Type) - int, double, char ...etc
+    - 참조 자료형(Reference Type) - 객체를 참조하는 변수로 클래스나 인터페이스로 생성된 객체
+
+그렇다면 참조자료형 캐스팅이란? -> 객체의 자료형을 변환하는 작업.
+여태까지의 객체 생성 방식
+```java
+A a = new A();
+```
+참조자료형 캐스팅의 의미를 고려했을 때의 객체 생성 방식
+```java
+A a = new B();
+```
+
+## 캐스팅 종류
+1. 업캐스팅 - 하위 클래스 타입의 객체를 상위 클래스 타입으로 변환
+2. 다운캐스팅 - 상위 클래스 타입의 객체를 하위 클래스 타입으로 변환
+
+### 추가적으로 기억해야할 사항 : 연산자(Operator) instanceof 
+- ex - 1 + 1 == 2에서 +가 연산자에 해당하는 개념인데
+- ex - 객체명 instanceof 클래스명 -> return true / false
+
+### 업캐스팅
+- 암시적(Implicit)으로 이루어짐 -> 알아서 바뀐다. 근데 언제 알아서 바뀌었는지 개발자가 알아야 함.
+### 다운캐스팅
+- 명시적(Explicit)으로 이루어짐 -> 반드시 개발자가 적절한 장소와 시간대에 사용해야 함.
+### 업캐스팅과 다운캐스팅의 활용
+- 캐스팅은 주로 다형성(Polymorphism)을 구현할 때 사용. 상위 클래스 타입으로 객체를 처리하면서도
+    동시에 하위 클래스의 고유 기능을 사용 가능.
+
+### 캐스팅의 장단점
+- 장점
+  - 코드 유연성 - 업캐스팅을 통해 '다양한 객체를 하나의 상위 클래스 타입으로 관리' 가능
+  - 다형성 구현 - 메서드 오버라이딩과 함께 사용하면 코드의 재사용성↑
+- 단점
+  - 다운 캐스팅의 위험성 - 잘못 다운캐스팅을 하게 될 위험성이 있음.
+    - 예를 들어 상위 클래스 A와 하위 클래스 B, C가 있다고 가정했을 때, B의 객체인 b를
+    A로 업캐스팅을 해서 공통 메서드를 실행시킨 후에, C 자료형으로 다운캐스팅을 하게 되면 오류 발생.
+  - 복잡성 증가 - 코드 가독성이 떨어질 수 있음. A로 바꿨다가 B로 내렸다가 또 A로 올렸다가 C로
+    잘못 다운캐스팅하면 안되니까 보험용 코드 작성했다가 난리를 치게 되면 복잡성이 증가됩니다.
+    특히 업캐스팅의 경우 암시적으로 일어나니까 지혼자서 상위 클래스로 바뀌었는데 언제 바뀌었는지
+    모르는 상태로 다운 캐스팅 진행하려고 하면 그 와중에 오류 발생하고 어디부터 고쳐야하는지
+    모르는 경우가 많이 생깁니다.
+  - 이상의 문제를 해결하기 위한 연산자 - instanceof
+```java
+public static void main(String[] args) {
+    System.out.println(objectA instanceof ClassA);  // 결과값 : true / false
+}
+```
+- return값이 true / false이므로 if 조건문과 함께 사용되는 일이 많습니다. 예시는 예제에서 보겠습니다.
+
 
 
 
