feat: 20250429 inheritance / abstract class / interface / casting

--- a/learning_log/20250429.md
+++ b/learning_log/20250429.md
@@ -170,6 +170,10 @@ public static void main(String[] args) {
 - return값이 true / false이므로 if 조건문과 함께 사용되는 일이 많습니다. 예시는 예제에서 보겠습니다.
 
 
+git add .
+git commit -m "feat: 20250429 inheritance / abstract class / interface / casting"
+git push
+
 
 
 
