--- a/learning_log/20250430.md
+++ b/learning_log/20250430.md
@@ -155,6 +155,35 @@ private static String staticCurriculum 변수를 가지고 될겁니다. 즉 어
    (즉, 공유되는 속성이 있다면 static 변수를 적극적으로 도입하는 것이 효율적이겠죠)
 
 
+# 싱글톤 패턴(Singleton Pattern)
+
+## 정의
+소프트웨어 '디자인 패턴' 중 하나로, 어떤 클래스가 하나의 인스턴스만 갖도록 보장하고, 그 인스턴스에
+접근할 수 있는 전역적인 접근법을 제공하는 패턴.
+예를 들어, 데이터베이스 연결과 같은 리소스는 프로그램 전체에서 하나의 인스턴스만 사용해야 할 때가
+많기 때문에 싱글톤 패턴을 사용함.
+
+## 특징
+1. 하나의 인스턴스만 존재 - 하나의 인스턴스만 생성되고, 이 인스턴스는 프로그램이 실행되는 동안 유지
+2. 전역 접근법 - 싱글톤 인스턴스는 정적(static) 메서드를 통하여 어디서든 접근 가능
+    - 객체명.메서드명() x / 클래스명.메서드명()
+3. 인스턴스의 생명 주기 관리 - 클래스 자체가 인스턴스 생성을 관리하므로, 다른 객체들이
+    인스턴스를 생성하거나 폐기할 수 없음.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
