--- a/learning_log/20250430.md
+++ b/learning_log/20250430.md
@@ -170,10 +170,70 @@ private static String staticCurriculum 변수를 가지고 될겁니다. 즉 어
 3. 인스턴스의 생명 주기 관리 - 클래스 자체가 인스턴스 생성을 관리하므로, 다른 객체들이
     인스턴스를 생성하거나 폐기할 수 없음.
 
+# 빌더 패턴(Builder Pattern)
+## 정의
+객체의 정의 과정에서 '복잡한 생성자'를 대신하여 객체를 단계적으로 생성할 수 있도록 도와주는
+디자인 패턴(Design Pattern). GOF(Gang of Four) 디자인 패턴 중 하나로 객체 '생성' 시
+가독성과 유연성을 제공하는 것이 목표
 
+## 특징
+1. 객체를 생성하는 여러 개의 필드를 '명시적'으로 관리할 수 있음
+2. 불필요한 생성자 오버로딩을 줄여 가독성을 높임.
+3. '체이닝 메서드'를 사용하여 객체를 직관적으로 생성
+```java
+public class Student {
+    String name;
+    String schoolName;
+    int studentCode;
+    
+    public Student() {}                                                             // 생성자 오버로딩 # 1
+    public Student(String name) {                                                   // 생성자 오버로딩 # 2
+        this.name = name;
+    }
+    // public Student(String shcoolName) -> 그와중에 얘는 오류 발생함. 이유는 말했습니다.
+    public Student(String name, String schoolName, int studentCode) {                // 생성자 오버로딩 # 3   
+        this.name = name;
+        this.schoolName = schoolName;
+        this.studentCode = studentCode;
+    }
+} 
 
+public class StudentMain {
+    public static void main(String[] args) {
+        Student student1 = new Student("만덕", "최만덕", 30311);
+    }
+}
 
+```
+## 빌더 패턴이 생기게 된 원인
+1. 복잡한 생성자 문제
+    - 객체의 필드가 많아질 수록 생성자의 매개변수 수도 늘어남.
+2. 생성자 오버로딩 문제
+   - 생성자에 필요한 조합이 다를 경우 수 많은 생성자를 하나하나 정의해야함(이건 롬복으로도 한계가 있습니다.)
+   - 유지 보수에 악영향 / 필드 하나 추가하면 생성자를 하나하나 뜯어고쳐야함 -> 제가 지금 저 위에 Student 클래스에
+        double score 추가하고 생성자 정의하라고 하는 순간 코드 라인의 수는 엄청 늘어나게 될겁니다.
+3. 가독성과 유지보수 문제
+    - 코드를 작성하고 읽는 입장에서는 객체를 생성할 때 어떤 값이 어떤 필드에 해당하는지 명확하지 않아서 실수를 유발할 가능성 ↑
 
+# 제네릭(Generic)
+
+## 개념 및 정의
+클래스나 메서드가 다룰 데이터 타입을 미리 명시하여 재사용성과 유연성을 높이는 기술
+
+### 타입 매개변수(Type Parameter)
+- 클래스나 메서드에서 사용할 실제 타입을 '대신하여' 사용하는 매개변수
+- 일반적으로 알파벳 대문자 하나로 표기함.
+  - T(Type) - 일반적으로 클래스 타입을 나타낼 때 사용
+  - E(Element) - 컬렉션(추후 수업 예정)의 요소(element)를 나타낼 때 사용
+  - K(Key) - Map(추후 수업)의 key를 나타낼 때 사용
+  - V(Value) - Map의 value 또는 제네릭 타입의 반환값으로 사용
+
+### 재사용성
+- 제네릭을 사용하면 다양한 자료형에 대해 하나의 클래스나 메서드를 정의할 수 있어 코드의 재사용성을 높이고 중복을 줄입니다.
+### 타입 안정성(Type Safety)
+- 컴파일 시점에 타입 체크를 할 수 있어 프로그램의 안정성을 높이고, 명시적인 형변환(casting을 말하는 겁니다)을 줄임.
+
+ch19_generic -> DataController / ResponseData 클래스 생성
 
 
 
