Feat: gson installation uploaded

--- a/learning_log/20250507.md
+++ b/learning_log/20250507.md
@@ -67,12 +67,40 @@ JSON(JavaScript Object Notation) - 본래 자바스크립트 언어로부터 파
         "JSON 예시": "마무리"
 }
 ```
+## GSON
+- Google JSON의 약자로 Java에서 생성한 '객체'를 매개변수로 넣으면 GSON 객체를 생성하고
+toString() 메서드를 사용, Map의 형태로 매칭시킨 데이터들을 JSON String으로 반환해주는
+기능을 지닌 라이브러리
 
+## GSON 라이브러리 설치
+chrome -> mvn -> maven repository로 들어갑니다. -> GSON 검색 -> 최신 버전 클릭
+-> 저희는 Maven 받으면 되죠. 드래그해서 복사 -> pom.xml로 이동
 
+```xml
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+            <scope>provided</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+    </dependencies>
+```
+-> 꼭꼭꼭꼭 저거 붙여넣기 하시고 나서 우측 상단에 새로고침해주셔야 합니다!! ✔
 
-
-
+## GSON 라이브러리
+### 목적
+Java 객체를 JSON 형태로 변환하거나 혹은 반대로 변환하는데 사용
+### 주요 클래스
+1. Gson - 변환을 위해 (JSON ⇋ Java 객체) 주로 사용되는 클래스
+2. GsonBuilder - GSON 인스턴스에 대한 사용자 정의 구성을 허용(prettyPrinting 등)
+3. JsonObject - JSON '객체'를 나타냄.
 
 
 
