feat: 20250507 wildcard / collection / Json / Exception

--- a/learning_log/20250507.md
+++ b/learning_log/20250507.md
@@ -149,3 +149,13 @@ public static void main(String[] args) {
 }
 
 ```
+git add .
+git commit -m "feat: 20250507 wildcard / collection / Json / Exception"
+git push
+
+
+
+
+
+
+
