--- a/learning_log/20250509.md
+++ b/learning_log/20250509.md
@@ -2,6 +2,7 @@
 
 # 점심 먹고 음료타임 가질거니까 식사하시고 음료 사오지 마세요 !
 
+
 # 람다식(Lambda Expression)
 - Java 8에서 도입된 '함수형 프로그래밍(Functional Programming)'을 지원하기
 위한 표현식에 해당합니다.
@@ -154,6 +155,58 @@ public static void main(String[] args) {
 
 ```
 
+# Stream API
+
+- Java 8에서 도입되었으며 컬렉션(List, Set 등)과 배열에 저장된 데이터를 선언형(Declarative)으로
+처리하기 위한 추상화된 반복(Iteration) 프레임워크
+- 데이터 소스로부터 파이프라인 형태로 여러 연산(필터링 / 매핑 / 정렬 / 집계 등)을 연결해 수행하며,
+내부적으로 병렬 처리도 간단한 수준이라면 지원함.
+
+## Stream API의 사용 이유
+1. 간결성
+    - 전통적인 for/while 반복문 대신 파이프라인 메서드 체이닝으로 가독성 향상
+2. 표현력
+    - "무엇을 처리할 것인가"를 '선언적으로 기술'하고, "어떻게 반복할 것인가"는 API에게 맡기게 됨.
+3. 병렬처리
+   - 성능 향상을 위한 방법 중 하나로 손쉽게 병렬 연산을 수행해 성능 최적화 가능
+4. 함수형 프로그래밍
+    - 람다식, 함수형 인터페이스와 결합해 고차 함수 스타일 설계 가능
+
+ch24_stream / StreamApiExample
+
+## 대표적인 메서드
+
+```java
+public static void main(String[] args) {
+    List<String> names = Arrays.asList("김영", "김일", "김이", "김삼", "김사", "최오", "최육", "최칠");
+    // filter()
+    List<String> namesWithKim = names.stream()
+            .filter(name -> name.startsWith("김"))
+            .toList();  // to어쩌고 메서드가 실행되었다는 말은, 걔 이전의 자료형이 절대 List가 아니라는 점
+
+    // 사실 filter는 그 자체로 한 방에 쓰이기 보다는 합쳐서 쓰입니다.
+    // filter / map / sorted / collect
+    List<String> englishNames = Arrays.asList("alice", "anya", "bacon", "camel", "pascal", "yor", "spy", "family");
+    List<String> result = englishNames.stream()
+            //.여기 사이에 다양한 메서드들 쓰라는 의미입니다(마치 builder 패턴 사용할 때 .build()가 자동생성됐었던 것처럼)
+            .filter(name -> name.startsWith("a"))       // "a"로 시작하는 element만 추출
+            .map(String::toUpperCase)                        // 이상의 결과값으로 "a"로시작하는 걸 뽑았는데, 대문자로 변환
+            .sorted()                                        // 정렬입니다 sort()가 아니죠. 이런게 좀 일관성이 없습니다.
+            .toList();                                      // List 자료형으로 변경
+
+    System.out.println(englishNames);
+    System.out.println(result);
+}
+```
+1. filter() - Collection 자료형의 특정 element들만 추출할 때 사용하는 메서드, 람다식 사용하면 훨씬 편리
+2. map() - Java Collection 자료형과는 다른 형태입니다. 오히려 python에서의 map함수와 유사한 형태로
+    Collection의 내부 element들에게 각각 함수/메서드를 적용하는 형태
+    즉, .map(String::toUpperCase)의 해석은 englishNames 리스트에서 a로 시작한 것만 걸러낸 결과값(.filter()이후에 작성됐으니까)인
+    리스트의 각 element들(`["alice", "anya")]`)에 toUpperCase()를 적용했다고 볼 수 있습니다. 그러면 결과값은
+    `["ALICE", "ANYA"]`가 됩니다.
+3. sorted() - 그것을 알파벳 순으로 정렬했습니다.
+4. toList() - 3.까지의 결과값이 Stream 자료형이기 때문에 List 자료형으로 바꾸는 메서드.
+5. 그리고 4.까지의 결과값을 result라는 변수에 대입했습니다.
 
 
 
