feat: homepage uploaded

--- a/learning_log/20250509.md
+++ b/learning_log/20250509.md
@@ -208,7 +208,27 @@ public static void main(String[] args) {
 4. toList() - 3.까지의 결과값이 Stream 자료형이기 때문에 List 자료형으로 바꾸는 메서드.
 5. 그리고 4.까지의 결과값을 result라는 변수에 대입했습니다.
 
+# 음료 목록 -> 전체 20잔
+아어랏빈 - 2
+어랏그린 - 1
+아아 - 3
+아카라멜마키아토 - 1
+- 7
 
+아이스티 - 1
+
+- 1
+아초코라떼 - 5
+아말차라떼 - 3
+아히비스커스 - 1
+- 9
+딸기주스 - 1
+- 1
+레몬에이드 - 1
+- 1
+콜드브루 - 1
+
+https://busan.koreaisacademy.com/community/post.asp
 
 
 
