feat: 20250509 4월 국비 Java 수업 끝. 그동안 수고하셨습니다 (❁´◡❁)

--- a/learning_log/20250509.md
+++ b/learning_log/20250509.md
@@ -228,10 +228,29 @@ public static void main(String[] args) {
 - 1
 콜드브루 - 1
 
-https://busan.koreaisacademy.com/community/post.asp
+강사 깃허브 4월 국비과정 Java
+https://github.com/maybeags/korit_4_java
 
+추후 질문 사항 : 010-7445-7113 안근수
 
+교재 왔는데 비와서 월요일 배부한다고 합니다.
 
+SQLD - 0721~0725 / 0823 시험 / 0919 발표
+정처기(산기) - 0721~0724 / 0809~0901 필기 / 0910 필기합격자발표 
+/ 0922~0925실기 접수 / 1101 ~ 1121 실기 시험 / 1224 발표
+정보처리기능사 - 0609~0612(빈자리접수 0622~0623) / 0628~0703 필기 / 0716 필기합격자발표
+/ 0728~0731 실기 접수 / 0830~0917 실기 시험 / 0930 발표
+정보처리기능사의 경우 4회차도 있습니다.
+
+정보처리기사 응시 기준 - 4년제 졸업 예정자 이상
+정보처리산업기사 응시 기준 - 초대졸 이상(졸업예정자 가능)
+정보처리기능사 응시 기준 - 고등학교 졸업자 이상
+
+17시30분
+
+lambda / Stream API -> 추가적인 학습 / API의 정의와 관련된 문서 API =/= RESTful API
+
+d
 
 
 
